# solana-practices

solana-clones/: metadata.json
solana-clones/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
solana-clones/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1741498468880767  MANIFEST-000021
spl-airdrop/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
spl-airdrop/programs/spl-airdrop/: Cargo.toml
spl-airdrop/programs/spl-airdrop/src/: lib.rs
spl-airdrop/programs/spl-airdrop/tests/: airdrop_test.rs
spl-airdrop/tests/: airdrop.test.ts
