[package]
name = "my_airdrop"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_airdrop"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["metadata"] }

[dev-dependencies]
solana-program-test = "1.18.18"
solana-sdk = "2.2.1"


